# coun

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: arg.h  coun.h  error.h
src/: arg.c  coun.c  main.c
test/: test_arg.c  test_coun.c
